--- a/Vue/learn/计算属性和监听器.html
+++ b/Vue/learn/计算属性和监听器.html
@@ -12,6 +12,8 @@
 
 <body>
   <div id="app">
+    <!-- 计算属性 为了解决模板里面的表达式  抽出来写 基于依赖进行缓存 -->
+    <!-- 我们为什么需要缓存？假设我们有一个性能开销比较大的计算属性 A，它需要遍历一个巨大的数组并做大量的计算。然后我们可能有其他的计算属性依赖于 A 。如果没有缓存，我们将不可避免的多次执行 A 的 getter！如果你不希望有缓存，请用方法来替代。 -->
     <!-- 数据有所依赖的 用计算属性好点  -->
     <p>Original message: "{{ message }}"</p>
       <p>Computed reversed message: "{{ reversedMessage }}"</p>
