--- a/Vue/learn/Vue实例.html
+++ b/Vue/learn/Vue实例.html
@@ -10,30 +10,63 @@
 </head>
 <body>
   <div id="app">
-    <p >{{foo}}</p>
+    <p >{{foo}}{{message}}</p>
     <!-- 这里的 `foo` 不会更新！ -->
     <button v-on:click=" foo = 'baz'">点击</button>
   </div>
   <div id="app2">
+    <p>${a}</p>
     <p>{{a}}</p>
     <button v-on:click=" a = 'baz'">点击</button>
   </div>
+  <div id="mount-point"></div>
 </body>
 <script>
   var obj = {
-    foo: 'bar'
+    foo: 'bar',
+    message: '123'
   }
-  Object.freeze(obj) // 其实就是 v-once
+  // Object.freeze(obj) // 其实就是 v-once
 var app = new Vue({
   el: '#app',
   /* data:{
     ...obj,
     a: 1
   } */
-  data:obj
+  data:obj,
+
+})
+var Profile = Vue.extend({
+  template: '<p>{{name}}</p>',
+  data:function() {
+    return{
+      name: 'hellll'
+    }
+  }
+})
+new Profile().$mount('#mount-point')
+
+// https://cn.vuejs.org/v2/guide/reactivity.html#%E5%BC%82%E6%AD%A5%E6%9B%B4%E6%96%B0%E9%98%9F%E5%88%97  nextTick  异步更新队列
+// 为了在数据变化之后等待 Vue 完成更新 DOM，可以在数据变化之后立即使用 Vue.nextTick(callback)。这样回调函数将在 DOM 更新完成后被调用。
+/* 
+组件内：
+methods: {
+  updateMessage: async function () {
+    this.message = '已更新'
+    console.log(this.$el.textContent) // => '未更新'
+    await this.$nextTick()
+    console.log(this.$el.textContent) // => '已更新'
+  }
+}
+*/
+app.message = 'new message' // 更改数据
+console.log(app.$el.textContent) // 
+Vue.nextTick(function () {
+  console.log(app.$el.textContent) // 
 })
 var app2 = new Vue({
   el: '#app2',
+  delimiters: ['${', '}'],
   data:{
     ...obj,
     a: 1
